fix copy button vertical alignment

--- a/src/app/button/button.component.scss
+++ b/src/app/button/button.component.scss
@@ -59,7 +59,7 @@ button:hover
   background-color: transparent;
   position: absolute;
   right: 15px;
-  top: 75px;
+  top: 121px;
 }
 .copy_svg
 {
